--- a/index.html
+++ b/index.html
@@ -94,6 +94,13 @@
         </div>
       </div>
     </div>
+    <div class="footer">
+      This project was coded by Alina Andreieva and is
+      <a href="https://github.com/alinaandreiieva/weather-app"
+        >open-cources on GitHub</a
+      >
+      and <a href="https://www.netlify.com/">hosted on Netlify</a>
+    </div>
     <script src="script/script.js"></script>
   </body>
 </html>
