Added attributes to the links

--- a/index.html
+++ b/index.html
@@ -96,10 +96,11 @@
     </div>
     <div class="footer">
       This project was coded by Alina Andreieva and is
-      <a href="https://github.com/alinaandreiieva/weather-app"
+      <a href="https://github.com/alinaandreiieva/weather-app" target="_blank"
         >open-cources on GitHub</a
       >
-      and <a href="https://www.netlify.com/">hosted on Netlify</a>
+      and
+      <a href="https://www.netlify.com/" target="_blank">hosted on Netlify</a>
     </div>
     <script src="script/script.js"></script>
   </body>
