--- a/index.html
+++ b/index.html
@@ -66,27 +66,27 @@
       <hr />
       <div class="container forecast-container">
         <div class="row">
-          <div class="col-2">
+          <div class="col">
             <h4>Tue</h4>
             <h5>10°<span class="low-temperature"> 7°</span></h5>
             <h6>🌧️</h6>
           </div>
-          <div class="col-2">
+          <div class="col">
             <h4>Wed</h4>
             <h5>16° <span class="low-temperature"> 8°</span></h5>
             <h6>☁️</h6>
           </div>
-          <div class="col-2">
+          <div class="col">
             <h4>Thu</h4>
             <h5>18°<span class="low-temperature"> 8°</span></h5>
             <h6>☁️</h6>
           </div>
-          <div class="col-2">
+          <div class="col">
             <h4>Fri</h4>
             <h5>19°<span class="low-temperature"> 9°</span></h5>
             <h6>🌧️</h6>
           </div>
-          <div class="col-2">
+          <div class="col">
             <h4>Sat</h4>
             <h5>14°<span class="low-temperature"> 8°</span></h5>
             <h6>🌧️</h6>
