--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                 >12</span
               >
               <span class="units">
-                <a href="#" id="celsius-unit">°C</a> |
-                <a href="#" id="fahrenheit-unit">°F</a>
+                <a href="#" class="unit-link" id="celsius-unit">°C</a> |
+                <a href="#" class="unit-link" id="fahrenheit-unit">°F</a>
               </span>
             </span>
             <h2 class="right-heading" id="weather-description">Mostly Sunny</h2>
