--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@
           <div class="col-6">
             <span class="right-container">
               <span class="right-heading emoji-bar"></span>
-              <span class="right-heading temperature-bar" id="temperature-bar"
-                >12</span
-              >
+              <span
+                class="right-heading temperature-bar"
+                id="temperature-bar"
+              ></span>
               <span class="units">
                 <span class="unit-container" id="celsius-unit">°C</span> |
                 <span class="unit-container" id="fahrenheit-unit">°F</span>
