Remove city from HTML

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="container data-container">
         <div class="row">
           <div class="col-6">
-            <h1 id="city">Krakow</h1>
+            <h1 id="city"></h1>
             <h2 class="current-date">Mon 20 Mar</h2>
             <h2 class="current-time">17:17</h2>
           </div>
