--- a/index.html
+++ b/index.html
@@ -50,17 +50,16 @@
           <div class="col-6">
             <span class="right-container">
               <span class="right-heading emoji-bar"></span>
-              <span
-                class="right-heading temperature-bar"
-                id="temperature-bar"
-              ></span>
+              <span class="right-heading temperature-bar" id="temperature-bar">
+                <img src="" alt="" id="icon" width="100" height="100" />
+              </span>
               <span class="units">
                 <span class="unit-container" id="celsius-unit">°C</span> |
                 <span class="unit-container" id="fahrenheit-unit">°F</span>
               </span>
             </span>
             <h2 class="right-heading" id="weather-description">Mostly Sunny</h2>
-            <h3 class="right-heading" id="min-max-temperature">H:14 L:4</h3>
+            <h3 class="right-heading" id="feels_like"></h3>
           </div>
         </div>
       </div>
