--- a/index.html
+++ b/index.html
@@ -44,21 +44,20 @@
         <div class="row">
           <div class="col-6">
             <h1 id="city"></h1>
-            <h2 class="current-date">Mon 20 Mar</h2>
-            <h2 class="current-time">17:17</h2>
+            <h2 class="current-date"></h2>
+            <h2 class="current-time"></h2>
           </div>
           <div class="col-6">
             <span class="right-container">
-              <span class="right-heading emoji-bar"></span>
+              <img class="main-icon" src="" alt="" id="icon" />
               <span class="right-heading temperature-bar" id="temperature-bar">
-                <img src="" alt="" id="icon" width="100" height="100" />
               </span>
               <span class="units">
                 <span class="unit-container" id="celsius-unit">°C</span> |
                 <span class="unit-container" id="fahrenheit-unit">°F</span>
               </span>
             </span>
-            <h2 class="right-heading" id="weather-description">Mostly Sunny</h2>
+            <h2 class="right-heading" id="weather-description"></h2>
             <h3 class="right-heading" id="feels_like"></h3>
           </div>
         </div>
