Add the unit converter

--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
               <span class="right-heading temperature-bar" id="temperature-bar">
               </span>
               <span class="units">
-                <span class="unit-container" id="celsius-unit">°C</span> |
-                <span class="unit-container" id="fahrenheit-unit">°F</span>
+                <a href="" class="active" id="celsius-unit">°C</a>
+                |
+                <a href="" id="fahrenheit-unit">°F</a>
               </span>
             </span>
             <h2 class="right-heading" id="weather-description"></h2>
