Added a new function

--- a/index.html
+++ b/index.html
@@ -64,18 +64,7 @@
         </div>
       </div>
       <hr />
-      <div class="forecast-container" id="forecast">
-        <div class="row">
-          <div class="col">
-            <div class="forecast-day">Tue</div>
-            <div class="forecast-temperature">
-              <span class="max-temperature">10°</span>
-              <span class="low-temperature"> 7°</span>
-            </div>
-            <div class="forecast-image">🌧️</div>
-          </div>
-        </div>
-      </div>
+      <div class="forecast-container" id="forecast"></div>
     </div>
     <div class="footer">
       This project was coded by Alina Andreieva and is
