Added wind speed

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
               </span>
             </span>
             <h2 class="right-heading" id="weather-description"></h2>
+            <h3 class="right-heading" id="wind-speed"></h3>
             <h3 class="right-heading" id="feels_like"></h3>
           </div>
         </div>
